<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Inventory</string>

    <!-- Label for overflow menu option that inserts fake item data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all item data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Items</string>

    <!-- Title for the activity to add a new item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_pet">Add an Item</string>

    <!-- Label for editor menu option to save item and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current item [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_name">Name</string>

    <!-- Text hint for item price field in editor -->
    <string name="hint_item_price">Price</string>

    <!-- Label for Quantity section in editor -->
    <string name="item_quantity">Quantity</string>

    <!-- The initial quantity value -->
    <string name="initial_quantity_value">0</string>

    <!-- Empty view text -->
    <string name="empty_view_title_text">You have no inventory!</string>

    <!-- Empty view subtext -->
    <string name="empty_view_subtitle_text">Add some items.</string>

    <!-- Label for supplier section in editor -->
    <string name="supplier_category">Supplier</string>

    <!-- Supplier name label -->
    <string name="supplier_name">Supplier Name</string>

    <!-- Supplier email addres label -->
    <string name="supplier_email_address">Email Address</string>

    <!-- Toast that shows when there's an error deleting an item -->
    <string name="deletion_error">Error with deleting item</string>

    <!-- Toast that shows when an item is deleted successfully -->
    <string name="item_deleted">Item deleted</string>

    <!-- Confirmation text that shows when you press delete -->
    <string name="delete_question">Delete this item?</string>

    <!-- Delete option for corresponding dialog box -->
    <string name="delete">Delete</string>

    <!-- Cancel option when you press delete -->
    <string name="cancel">Cancel</string>

    <!-- To press when you wish to keep editing in editor if you accidentally hit back or home -->
    <string name="keep_editing">Keep Editing</string>

    <!-- To press when you wish to discard changes in editor-->
    <string name="discard">Discard</string>

    <!-- Prompt text when you accidentally hit back or home -->
    <string name="discard_changes_question">Discard your changes and quit editing?</string>

    <!-- Toast that shows when the image fails to load-->
    <string name="image_load_failed">Failed to load image.</string>

    <!-- Toast that shows when you attempt to decrement 0 in the quantity EditText -->
    <string name="no_negative_quantity">Can\'t have a negative quantity</string>

    <!-- Toast that shows when there was an error updating an item -->
    <string name="update_error">Error with updating item</string>

    <!-- Toast that shows when the item was updated successfully -->
    <string name="item_updated">Item updated</string>

    <!-- Toast that shows when a new item is saved successfully -->
    <string name="item_saved">Item saved</string>

    <!-- Toast that shows when there was an error saving a new item -->
    <string name="save_error">Error with saving item</string>

    <!-- Label for Editor when editing an existing item -->
    <string name="edit_item">Edit Item</string>

    <!-- Label for Editor when adding a new item -->
    <string name="add_item">Add an Item</string>

    <!-- Toast text when there is no inventory available and the Sell button is pressed -->
    <string name="no_inventory">No more inventory available!</string>

    <!-- String for sell button -->
    <string name="sell">Sell</string>

</resources>